[project]
name = "spoc"
dynamic = ["version"]
description = "Elastic Framework Builder"
readme = "README.md"
authors = [
    { name = "hlop3z", email = "23062270+hlop3z@users.noreply.github.com" },
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/spoc/__about__.py"

[tool.ty.environment]
root = ["./src"]

# Note: unresolved-import ignored due to ty bug with Windows path case sensitivity
# See: https://github.com/astral-sh/ty/issues - GitHub vs github in path
[tool.ty.rules]
unresolved-import = "ignore"

[dependency-groups]
dev = [
    # Devs Tools
    "pytest>=9.0.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]
docs = [
    # Docs Tools
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocstrings[python]>=1.0.0",
    "termynal>=0.13.0",
]
